--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,6 @@ jobs:
     - name: start and test
       run: |
         npm install
-        npm start & npm test
+        npm start &
+        sleep 100
+        npm test
